deployments/kubernetes/overlays/staging/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-frontend
spec:
  replicas: 1
